Working on adding useful information to the popup

--- a/popup.html
+++ b/popup.html
@@ -4,7 +4,11 @@ body {
   overflow-x:hidden;
 }
 </style>
+<script src="jquery.js" type="text/javascript"></script>
+<script type="text/javascript" charset="utf-8" src="popup_info.js"></script>
 <body>
   <h3>ComicNav</h3>
-  Customize this bad boy!
+  <div id="site_bindings">
+  	<p>No bindings exist for this site; go to "options" to add one</p>
+  </div>
 </body>
