Adding link to options in popup

--- a/popup.html
+++ b/popup.html
@@ -20,4 +20,5 @@ body {
      <p><input type="submit" value="Add!"></p>
     </form>
   </div>
+  <p>To edit your XPath, go to the <a target="_blank" href="options.html">Options Page</a>.</p>
 </body>
